Kubertnetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-inspection-app
  namespace: vehicle-inspection
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: vehicle-inspection-app
  template:
    metadata:
      labels:
        app: vehicle-inspection-app
    spec:
      containers:
        - name: vehicle-inspection-app
          image: lejz0/vehicle-inspection-app:latest
          ports:
            - containerPort: 9090
